@@ -1,18 +1,20 @@
 package jerozgen.languagereload.mixin;
 
 import com.google.common.collect.Lists;
+import com.llamalad7.mixinextras.injector.ModifyExpressionValue;
 import jerozgen.languagereload.LanguageReload;
 import jerozgen.languagereload.config.Config;
 import net.minecraft.client.resource.language.LanguageDefinition;
 import net.minecraft.client.resource.language.LanguageManager;
 import net.minecraft.resource.ResourceManager;
+import net.minecraft.util.Language;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
+import org.spongepowered.asm.mixin.injection.Redirect;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
-import org.spongepowered.asm.mixin.injection.callback.LocalCapture;
 
 import java.util.*;
 
@@ -22,12 +24,19 @@ abstract class LanguageManagerMixin {
 
     @Shadow public abstract LanguageDefinition getLanguage(String code);
 
-    @Inject(method = "reload", locals = LocalCapture.CAPTURE_FAILHARD, at = @At(value = "INVOKE", ordinal = 0,
-            remap = false, target = "Ljava/util/List;add(Ljava/lang/Object;)Z", shift = At.Shift.AFTER))
-    void onReload$addFallbacks(ResourceManager manager, CallbackInfo ci, List<String> list) {
+    @Redirect(method = "reload", at = @At(value = "INVOKE", ordinal = 0, remap = false,
+            target = "Ljava/util/List;add(Ljava/lang/Object;)Z"))
+    boolean onReload$addFallbacks(List<String> list, Object enUsCode) {
         Lists.reverse(Config.getInstance().fallbacks).stream()
                 .filter(code -> Objects.nonNull(getLanguage(code)))
                 .forEach(list::add);
+        return true;
+    }
+
+    @ModifyExpressionValue(method = "reload", at = @At(value = "INVOKE", remap = false,
+            target = "Ljava/lang/String;equals(Ljava/lang/Object;)Z"))
+    boolean onReload$ignoreNoLanguage(boolean original) {
+        return Config.getInstance().language.equals(LanguageReload.NO_LANGUAGE);
     }
 
     @Inject(method = "reload", at = @At(value = "INVOKE", ordinal = 0, remap = false,
@@ -50,13 +59,16 @@ abstract class LanguageManagerMixin {
                     })
                     .findFirst()
                     .ifPresent(lang -> setSystemLanguage(lang, locale));
-            else if (count == 1) setSystemLanguage(matchingLanguages.get(0), locale);
+            else if (count == 1) setSystemLanguage(matchingLanguages.getFirst(), locale);
         }
     }
 
     @Unique
     private static void setSystemLanguage(String lang, Locale locale) {
         LanguageReload.LOGGER.info("Set language to {} (mapped from {})", lang, locale.toLanguageTag());
-        LanguageReload.setLanguage(lang, new LinkedList<>());
+        LanguageReload.setLanguage(lang, new LinkedList<>() {{
+            if (!lang.equals(Language.DEFAULT_LANGUAGE))
+                add(Language.DEFAULT_LANGUAGE);
+        }});
     }
 }
